# AutoPDFParse

./: .gitignore  README.md  pyproject.toml
.github/: workflow.yml
autopdfparse/: __init__.py  exceptions.py  models.py  parse.py  utils.py
autopdfparse/parsers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  openai_parser.py
autopdfparse/providers/: anthropic.py  gemini.py  openai.py
autopdfparse/services/: __init__.py  parser.py  vision.py
autopdfparse/sync/providers/: anthropic.py  openai.py
autopdfparse/sync/services/: parser.py
src/autopdfparse/: models.py
src/autopdfparse/providers/: anthropic.py  gemini.py
src/autopdfparse/services/: parser.py
src/autopdfparse/sync/providers/: anthropic.py  gemini.py  openai.py
src/autopdfparse/sync/services/: parser.py
tests/integration/: test_providers.py
tests/unit/: test_parser.py
tests/utils/: local_vision.py
